@@ -52,7 +52,6 @@ import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.transform.OutputKeys;
 import javax.xml.transform.Result;
 import javax.xml.transform.Transformer;
-import javax.xml.transform.TransformerConfigurationException;
 import javax.xml.transform.TransformerException;
 import javax.xml.transform.TransformerFactory;
 import javax.xml.transform.dom.DOMSource;
@@ -62,6 +61,8 @@ import javax.xml.xpath.XPath;
 import javax.xml.xpath.XPathConstants;
 import javax.xml.xpath.XPathExpressionException;
 import javax.xml.xpath.XPathFactory;
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.w3c.dom.Document;
 import org.w3c.dom.NodeList;
@@ -76,63 +77,47 @@ public class UtilityMain {
 	public static final Logger LOGGER = Logger.getLogger(UtilityMain.class.getName());
 
 	public static final String USER_AGENT = "Mozilla/5.0";
-	public static final String CONTENTTYPE_FORM = "application/x-www-form-urlencoded";
-	public static final String CONTENTTYPE_JSON = "application/json; charset=utf-8";
-	public static final String CONTENTTYPE_MULTI = "multipart/form-data; boundary=";
-	public static final String AUTHORIZATION_JWT = "anyService_Api"; // sourceId
-	public static final String AUTH_SECRET = "anyhash"; // client-secret in HMAC SHA256 or RSA
-
 	public static final String GREEN = "\u001b[32,1m";
 	public static final String RESET = "\u001b[0m";
-	public static final String DLM = ",";
 	public static final String TAB = "\t";
 	public static final String EOL = "\n";
 	public static final String CRLF = "\r\n";
 
 	public static final String FLD_SAMPLE = "static/";
 	public static final String TXT_SAMPLE = "Genesis_01.txt";
-	public static final String YML_SAMPLE = "application.yml";
 	public static final String XML_SAMPLE = "xml/books.xml";
-	public static final String JSN_SAMPLE = "xml/books.json";
 	public static final String ZIP_SAMPLE = "xml_wav_plants_w10.zip";
+	public static final String PATH_LOCAL_TEMP = "src/main/resources/temp/";
+	public static final String PATH_PREF = "C:/workspace/github/spring_annotations/src/main/resources/";
+	//
 
 	public static void main(String[] strings) {
 		//
 		LOGGER.info("UtilityMain");
-		System.out.println(showTime());
 		System.out.println(GREEN + "DONE" + RESET);
 	}
 
-	//############
+	//#### basics
 	public static String showSys() {
 		//
 		Map<String, String> mapEnv = System.getenv();
-		Map<String, String> mapEnvTree = new TreeMap<String, String>(mapEnv);
+		Map<String, String> mapEnvTree = new TreeMap<>(mapEnv);
 		StringBuffer stringBuffer = new StringBuffer();
 		stringBuffer.append("[");
+		AtomicInteger aint = new AtomicInteger();
 		mapEnvTree.forEach((key, val) -> {
 			//
 			val = val.replace("\\", "/");
 			val = val.replace("\"", "'");
-			stringBuffer.append("{\"" + key + "\":\"" + val + "\"},");
+			// stringBuffer.append("{\"" + key + "\":\"" + val + "\"},");
+			stringBuffer.append(String.format("\t%03d %-20s : %s\n", aint.incrementAndGet(), key, val));
 		});
-		stringBuffer.append("\n{\"" + "USERNAME" + "\":\"" + System.getenv("USERNAME") + "\"}");
-		stringBuffer.append("\n]");
+		stringBuffer.append("]\n");
+		stringBuffer.append("\tUSERNAME: ").append(System.getenv("USERNAME")).append(EOL);
 		return stringBuffer.toString();
 	}
 
-	public static String showTime() {
-		//
-		String txtLine = "";
-		LocalDateTime localDateTime = LocalDateTime.now();
-		txtLine = ISO_DATE_TIME.format(localDateTime);
-		// txtLine = new Date( ).toString( );
-		return txtLine;
-	}
-
 	public static String showTimes() {
-		//
-		String txtLines = "";
 		//
 		String instantNow = Instant.now().toString();
 		//
@@ -148,7 +133,7 @@ public class UtilityMain {
 		SDFZ.setTimeZone(TimeZone.getTimeZone(ZoneOffset.UTC));
 		String stzFormat = SDFZ.format(new Date());
 		//
-		txtLines = "showTimes()" + EOL;
+		String txtLines = "showTimes()" + EOL;
 		txtLines += String.format("\t instantNow: %s \n", instantNow);
 		txtLines += String.format("\t ldtFormat : %s \n", ldtFormat);
 		txtLines += String.format("\t sdfFormat : %s \n", sdfFormat);
@@ -157,6 +142,7 @@ public class UtilityMain {
 		return txtLines;
 	}
 
+	//#### files
 	public static String getFileLines(String pathFile, String eol) {
 		/*
 			https://mkyong.com/java8/java-8-stream-read-a-file-line-by-line/
@@ -168,7 +154,7 @@ public class UtilityMain {
 		if (pathFile == null || pathFile.equals("")) { pathFile = FLD_SAMPLE + TXT_SAMPLE; }
 		if (eol == null || eol.equals("")) { eol = EOL; }
 		//
-		List<String> list = new ArrayList<>();
+		List<String> list;
 		try (BufferedReader bReader = Files.newBufferedReader(Paths.get(pathFile))) {
 			//
 			list = bReader.lines().collect(Collectors.toList());
@@ -180,41 +166,88 @@ public class UtilityMain {
 		return txtLines;
 	}
 
-	public static String getFileLocal(String pathFile, String delim) {
+	public static String getFileLocal(String pathFile) {
 		//
 		// https://howtodoinjava.com/java/io/read-file-from-resources-folder/
 		// File file = ResourceUtils.getFile("classpath:config/sample.txt")
 		String txtLines = "";
 		if (pathFile == null || pathFile.equals("")) { pathFile = FLD_SAMPLE + TXT_SAMPLE; }
-		if (delim == null || delim.equals("")) { delim = EOL; }
 		try {
-			/*
-			ClassLoader classLoader = ClassLoader.getSystemClassLoader( );
-			URL url = classLoader.getResource( fileName );
-			urlFile = url.getFile( );
-			// fails if run in: mvn exec:java -Dexec.mainClass
-			// URL[] urls = ( (URLClassLoader) classLoader ).getURLs();
-			// for(URL url: urls){ System.out.println(url.getFile( ) ); }
-			*/
 			File fileLocal = new File(pathFile);
 			File pathFileLocal = new File(fileLocal.getAbsolutePath());
-			txtLines = new String(Files.readAllBytes(pathFileLocal.toPath()), UTF_8);
+			txtLines = Files.readString(pathFileLocal.toPath());
 		}
 		catch (IOException | NullPointerException ex) { LOGGER.warning(ex.getMessage()); }
 		return txtLines;
 	}
 
-	//############
+	public static List<File> getFilesFromZip(String fileName) {
+		//
+		// https://www.baeldung.com/java-compress-and-uncompress
+		List<File> list = new ArrayList<>();
+		if (fileName == null || fileName.equals("")) { fileName = FLD_SAMPLE + ZIP_SAMPLE; }
+		int BUFFER_SIZE = 4096;
+		String fileItem;
+		try {
+			//
+			ClassLoader classLoader = ClassLoader.getSystemClassLoader();
+			File fileZip = new File(classLoader.getResource(fileName).getFile());
+			FileInputStream fis = new FileInputStream(fileZip);
+			ZipInputStream zis = new ZipInputStream(fis);
+			ZipEntry zipEntry = zis.getNextEntry();
+			//
+			FileOutputStream fos;
+			byte[] bytes;
+			int intReadLen;
+			File file;
+			while (zipEntry != null) {
+				//
+				fileItem = zipEntry.getName();
+				file = new File(PATH_LOCAL_TEMP + fileItem);
+				intReadLen = 0;
+				bytes = new byte[BUFFER_SIZE];
+				fos = new FileOutputStream(file);
+				while ((intReadLen = zis.read(bytes)) > 0) {
+					fos.write(bytes, 0, intReadLen);
+				}
+				fos.close();
+				zipEntry = zis.getNextEntry();
+				list.add(file);
+			}
+		}
+		catch (IOException ex) { LOGGER.warning(ex.getMessage()); }
+		return list;
+	}
+
+	public static String getZipFileList(String fileName, String eol) {
+		//
+		// https://www.baeldung.com/java-compress-and-uncompress
+		StringBuilder stringBuilder = new StringBuilder();
+		if (eol == null || eol.equals("")) { eol = EOL; }
+		//
+		List<File> list = UtilityMain.getFilesFromZip(fileName);
+		for (File file : list) { stringBuilder.append(file.getName()).append(eol); }
+		return stringBuilder.toString();
+	}
+
+	public static File putFilesIntoZip(List<File> list) { /* ??? */
+		//
+		// https://www.baeldung.com/java-compress-and-uncompress
+		File file = null;
+		return file;
+	}
+
+	//#### url
 	public static String urlGet(String link) {
 		//
-		String txtLines = "";
+		String txtLines;
 		try {
 			URL url = new URL(link);
 			HttpURLConnection httpConn = (HttpURLConnection) url.openConnection();
 			httpConn.setRequestMethod("GET");
-			httpConn.setRequestProperty("User-Agent", USER_AGENT);
-			//	httpConn.setRequestProperty( "Content-Type", CONTENTTYPE_JSON );
-			//	httpConn.setRequestProperty( "Authorization", "JWT " + jwtSourceId );
+			httpConn.setRequestProperty(HttpHeaders.USER_AGENT, USER_AGENT);
+			// httpConn.setRequestProperty( HttpHeaders.CONTENT_TYPE, CONTENTTYPE_JSON );
+			// httpConn.setRequestProperty( HttpHeaders.AUTHORIZATION, "JWT " + jwtSourceId );
 			httpConn.setConnectTimeout(5000);
 			httpConn.setReadTimeout(5000);
 			//
@@ -226,7 +259,7 @@ public class UtilityMain {
 			InputStreamReader isr = new InputStreamReader(inputStream);
 			BufferedReader bufferedReader = new BufferedReader(isr);
 			StringBuilder stringBuilder = new StringBuilder();
-			String txtLine = "";
+			String txtLine;
 			while ((txtLine = bufferedReader.readLine()) != null) {
 				stringBuilder.append(txtLine);
 			}
@@ -247,10 +280,11 @@ public class UtilityMain {
 			URL url = new URL(link);
 			HttpURLConnection httpConn = (HttpURLConnection) url.openConnection();
 			httpConn.setDoOutput(true);
-			httpConn.setRequestMethod("POST");
-			httpConn.setRequestProperty("User-Agent", USER_AGENT);
-			httpConn.setRequestProperty("Content-Type", CONTENTTYPE_FORM);
-			//	httpConn.setRequestProperty( "Authorization", "JWT " + jwtSourceId );
+			httpConn.setRequestMethod(HttpMethod.POST.toString());
+			httpConn.setRequestProperty(HttpHeaders.USER_AGENT, USER_AGENT);
+			httpConn
+				.setRequestProperty(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_FORM_URLENCODED_VALUE);
+			// httpConn.setRequestProperty( HttpHeaders.AUTHORIZATION, "JWT " + jwtSourceId );
 			//
 			OutputStream outputStream = httpConn.getOutputStream();
 			outputStream.write(postParms.getBytes());
@@ -263,17 +297,17 @@ public class UtilityMain {
 			//
 			InputStream inputStream = httpConn.getInputStream();
 			InputStreamReader isr = new InputStreamReader(inputStream);
-			BufferedReader bufferedReader = null;
-			StringBuffer stringBuffer = new StringBuffer();
-			String txtLine = "";
+			BufferedReader bufferedReader;
+			StringBuilder stringBuilder = new StringBuilder();
+			String txtLine;
 			if (responseCode == HttpURLConnection.HTTP_OK) {
 				//
 				bufferedReader = new BufferedReader(isr);
 				while ((txtLine = bufferedReader.readLine()) != null) {
-					stringBuffer.append(txtLine);
+					stringBuilder.append(txtLine);
 				}
 				bufferedReader.close();
-				txtLines = stringBuffer.toString();
+				txtLines = stringBuilder.toString();
 			}
 			else {
 				LOGGER.info("POST failed to: " + link);
@@ -290,21 +324,17 @@ public class UtilityMain {
 		//
 		// https://www.baeldung.com/httpclient-multipart-upload
 		// https://stackoverflow.com/questions/2469451/upload-files-from-java-client-to-a-http-server
-		String txtLines = "";
-		String PATH_PREF = "";
-		if (PATH_PREF == null || PATH_PREF.equals("")) {
-			PATH_PREF = "C:/workspace/github/spring_annotations/src/main/resources/";
-		}
-		//
+		String txtLines;
 		File fileTxt = new File(PATH_PREF + pathTxt);
 		File fileBin = new File(PATH_PREF + pathBin);
 		String boundary = Long.toHexString(System.currentTimeMillis()); // random boundary
-		URLConnection urlConn = null;
+		URLConnection urlConn;
 		try {
 			URL url = new URL(link);
 			urlConn = url.openConnection();
 			urlConn.setDoOutput(true);
-			urlConn.setRequestProperty("Content-Type", CONTENTTYPE_MULTI + boundary);
+			urlConn.setRequestProperty(HttpHeaders.CONTENT_TYPE,
+				MediaType.MULTIPART_FORM_DATA_VALUE + "; boundary=" + boundary);
 			//	urlConn.setRequestProperty( "Authorization", "JWT " + jwtSourceId );
 			//
 			System.out.println("0 urlConn.getOutputStream( )");
@@ -313,35 +343,38 @@ public class UtilityMain {
 			PrintWriter writer = new PrintWriter(osw, true);
 			//
 			System.out.println("1 Send normal parms");
-			writer.append("--" + boundary).append(CRLF);
-			writer.append("Content-Disposition: form-data; name=\"param\"").append(CRLF);
-			writer.append("Content-Type: text/plain; charset=" + UTF_8).append(CRLF);
-			writer.append(CRLF).append(postParms).append(CRLF).flush();
+			writer.append("--").append(boundary).append(CRLF)
+				.append("Content-Disposition: form-data; name=\"param\"").append(CRLF)
+				.append("Content-Type: text/plain; charset=").append(UTF_8.toString()).append(CRLF)
+				.append(CRLF).append(postParms).append(CRLF)
+				.flush();
 			//
 			System.out.println("2 Send text file in charset UTF_8");
-			writer.append("--" + boundary).append(CRLF);
-			writer.append("Content-Disposition: form-data; name=\"textFile\"; filename=\""
-				+ fileTxt.getName() + "\"").append(CRLF);
-			writer.append("Content-Type: text/plain; charset=" + UTF_8).append(CRLF);
-			writer.append(CRLF).flush();
+			writer.append("--").append(boundary).append(CRLF)
+				.append("Content-Disposition: form-data; name=\"textFile\"; filename=\"")
+				.append(fileTxt.getName()).append("\"").append(CRLF)
+				.append("Content-Type: text/plain; charset=").append(UTF_8.toString()).append(CRLF)
+				.append(CRLF)
+				.flush();
 			Files.copy(fileTxt.toPath(), outputStream);
 			outputStream.flush(); // Important before continuing with writer!
 			writer.append(CRLF).flush(); // CRLF indicates end of boundary
 			//
 			System.out.println("3 Send binary file");
-			writer.append("--" + boundary).append(CRLF);
-			writer.append("Content-Disposition: form-data; name=\"binaryFile\"; filename=\""
-				+ fileBin.getName() + "\"").append(CRLF);
+			writer.append("--").append(boundary).append(CRLF)
+				.append("Content-Disposition: form-data; name=\"binaryFile\"; filename=\"")
+				.append(fileBin.getName()).append("\"").append(CRLF);
 			String fileBinContentType = URLConnection.guessContentTypeFromName(fileBin.getName());
-			writer.append("Content-Type: " + fileBinContentType).append(CRLF);
-			writer.append("Content-Transfer-Encoding: binary").append(CRLF);
-			writer.append(CRLF).flush();
+			writer.append("Content-Type: ").append(fileBinContentType).append(CRLF)
+				.append("Content-Transfer-Encoding: binary").append(CRLF)
+				.append(CRLF)
+				.flush();
 			Files.copy(fileBin.toPath(), outputStream);
 			outputStream.flush(); // Important before continuing with writer!
 			writer.append(CRLF).flush(); // CRLF indicates end of boundary
 			//
 			System.out.println("4 end of multipart/form-data");
-			writer.append("--" + boundary + "--").append(CRLF).flush();
+			writer.append("--").append(boundary).append("--").append(CRLF).flush();
 			//
 			System.out.println("5 request lazily fired to get response info");
 			int responseCode = ((HttpURLConnection) urlConn).getResponseCode();
@@ -355,12 +388,12 @@ public class UtilityMain {
 		return txtLines;
 	}
 
-	//############
+	//#### reflection
 	public static String getField(Object object, String nameField) {
 		//
 		String txtLine = "";
 		try {
-			Class clazz = object.getClass();
+			Class<?> clazz = object.getClass();
 			Field field = clazz.getDeclaredField(nameField);
 			field.setAccessible(true);
 			Object objectField = field.get(object);
@@ -370,7 +403,7 @@ public class UtilityMain {
 		return txtLine;
 	}
 
-	public static Object getMethod(Class clazz, String nameMethod, Object... objectParms) {
+	public static Object getMethod(Class<?> clazz, String nameMethod, Object... objectParms) {
 		//
 		Object objectReturn = "";
 		try {
@@ -380,7 +413,8 @@ public class UtilityMain {
 			else { parmsCount = objectParms.length;}
 			Class<?>[] classArray = new Class<?>[parmsCount];
 			for (int ictr = 0; ictr < parmsCount; ictr++) {
-				objectItem = objectParms[ictr];
+				try { objectItem = objectParms[ictr]; }
+				catch (NullPointerException ex) { LOGGER.info(ex.getMessage()); }
 				if (objectItem == null) {
 					classArray = new Class<?>[0];
 					objectParms = null;
@@ -426,18 +460,18 @@ public class UtilityMain {
 				catch (IllegalAccessException | InvocationTargetException ex) {
 					LOGGER.info(ex.getMessage());
 				}
-				if (objectVal==null) { objectVal = "NULL or EMPTY"; }
+				if (objectVal == null) { objectVal = "NULL or EMPTY"; }
 			}
 			boolean boolAccess = mthd.getName().startsWith("access$");
-			if (boolAccess) {}
-			else {
+			if (!boolAccess) {
 				set.add(String.format(FRMT, atomicInteger.incrementAndGet(),
-					mthd.getName(), returnType, mthd.getParameterCount(),objectVal.toString()));
+					mthd.getName(), returnType, mthd.getParameterCount(), objectVal));
 			}
 		});
 		//
 
-		stringBuilder.append(object.getClass().getName() + " has: [" + methods.length + "] methods\n\n");
+		stringBuilder.append(object.getClass().getName()).append(" has: [").append(methods.length)
+			.append("] methods\n\n");
 		set.stream().sorted().forEach(val -> stringBuilder.append(val));
 		return stringBuilder + "\n";
 	}
@@ -445,7 +479,7 @@ public class UtilityMain {
 	public static void putObject(Object object, String objectName, Object objectValue) {
 		//
 		try {
-			Class clazz = object.getClass();
+			Class<?> clazz = object.getClass();
 			Field field = clazz.getDeclaredField(objectName);
 			field.setAccessible(true);
 			field.set(object, objectValue);
@@ -455,64 +489,7 @@ public class UtilityMain {
 		}
 	}
 
-	//############
-	public static List<File> getFilesFromZip(String fileName) {
-		//
-		// https://www.baeldung.com/java-compress-and-uncompress
-		List<File> list = new ArrayList<>();
-		if (fileName == null || fileName.equals("")) { fileName = FLD_SAMPLE + ZIP_SAMPLE; }
-		int BUFFER_SIZE = 4096;
-		String DIR_TEMP = "src/main/resources/temp/";
-		String fileItem = "";
-		try {
-			//
-			ClassLoader classLoader = ClassLoader.getSystemClassLoader();
-			File fileZip = new File(classLoader.getResource(fileName).getFile());
-			FileInputStream fis = new FileInputStream(fileZip);
-			ZipInputStream zis = new ZipInputStream(fis);
-			ZipEntry zipEntry = zis.getNextEntry();
-			//
-			FileOutputStream fos = null;
-			byte[] bytes = null;
-			int intReadLen = 0;
-			File file = null;
-			while (zipEntry != null) {
-				//
-				fileItem = zipEntry.getName();
-				file = new File(DIR_TEMP + fileItem);
-				intReadLen = 0;
-				bytes = new byte[BUFFER_SIZE];
-				fos = new FileOutputStream(file);
-				while ((intReadLen = zis.read(bytes)) > 0) {
-					fos.write(bytes, 0, intReadLen);
-				}
-				fos.close();
-				zipEntry = zis.getNextEntry();
-				list.add(file);
-			}
-		}
-		catch (IOException ex) { LOGGER.warning(ex.getMessage()); }
-		return list;
-	}
-
-	public static String getZipFileList(String fileName, String eol) {
-		//
-		String txtLines = "";
-		if (eol == null || eol.equals("")) { eol = EOL; }
-		//
-		List<File> list = UtilityMain.getFilesFromZip(fileName);
-		for (File file : list) { txtLines += file.getName() + eol; }
-		return txtLines;
-	}
-
-	public static File putFilesIntoZip(List<File> list) { /* ??? */
-		//
-		// https://www.baeldung.com/java-compress-and-uncompress
-		File file = null;
-		return null;
-	}
-
-	//############
+	//#### xml/yml/json
 	public static String getXmlFileNode(String xmlfile, String xpathTxt, String eol) {
 		//
 		// https://howtodoinjava.com/xml/evaluate-xpath-on-xml-string/
@@ -537,14 +514,9 @@ public class UtilityMain {
 				txtLines += eol + nodeList.item(ictr).getNodeValue();
 			}
 		}
-		catch (ParserConfigurationException ex) {
+		catch (ParserConfigurationException | SAXException | XPathExpressionException | IOException ex) {
 			LOGGER.warning(ex.getMessage());
 		}
-		catch (SAXException ex) { LOGGER.warning(ex.getMessage()); }
-		catch (XPathExpressionException ex) {
-			LOGGER.warning(ex.getMessage());
-		}
-		catch (IOException ex) { LOGGER.warning(ex.getMessage()); }
 		return txtLines;
 	}
 
@@ -565,7 +537,7 @@ public class UtilityMain {
 	public static String formatXml(String xmlOld) {
 		//
 		String xml = "";
-		if (xmlOld == null || xmlOld.equals("")) { xmlOld = getFileLocal(FLD_SAMPLE + XML_SAMPLE, ""); }
+		if (xmlOld == null || xmlOld.equals("")) { xmlOld = getFileLocal(FLD_SAMPLE + XML_SAMPLE); }
 		//
 		Document document = null;
 		try {
@@ -575,9 +547,9 @@ public class UtilityMain {
 			InputSource inputSource = new InputSource(stringReader);
 			document = documentBuilder.parse(inputSource);
 		}
-		catch (ParserConfigurationException ex) { LOGGER.severe(ex.getMessage()); }
-		catch (SAXException ex) { LOGGER.severe(ex.getMessage()); }
-		catch (IOException ex) { LOGGER.severe(ex.getMessage()); }
+		catch (ParserConfigurationException | SAXException | IOException ex) {
+			LOGGER.warning(ex.getMessage());
+		}
 		try {
 			StringWriter stringWriter = new StringWriter();
 			StreamResult streamResultXML = new StreamResult(stringWriter);
@@ -593,7 +565,6 @@ public class UtilityMain {
 			transformer.transform(domSource, streamResultXML);
 			xml = streamResultXML.getWriter().toString();
 		}
-		catch (TransformerConfigurationException ex) { LOGGER.severe(ex.getMessage()); }
 		catch (TransformerException ex) { LOGGER.severe(ex.getMessage()); }
 		return xml;
 	}
@@ -619,7 +590,6 @@ public class UtilityMain {
 			transformer.transform(streamSourceXML, result);
 			txtLines = baos.toString();
 		}
-		catch (TransformerConfigurationException ex) { LOGGER.severe(ex.getMessage()); }
 		catch (TransformerException ex) { LOGGER.severe(ex.getMessage()); }
 		//
 		return txtLines;
@@ -657,13 +627,11 @@ public class UtilityMain {
 		//
 		String txtLines = "";
 		ObjectMapper objectMapperHtml = new ObjectMapper();
-		TypeReference<ArrayList<LinkedHashMap<String, String>>> typeReference
-			= new TypeReference<ArrayList<LinkedHashMap<String, String>>>() {};
-		ArrayList<LinkedHashMap<String, String>> arrayList = null;
-		Set set = null;
-		String txtKey = "";
-		String txtVal = "";
-		Object objVal = null;
+		TypeReference<ArrayList<LinkedHashMap<String, String>>> typeReference = new TypeReference<>() {};
+		ArrayList<LinkedHashMap<String, String>> arrayList;
+		Set<?> set;
+		String txtKey, txtVal;
+		Object objVal;
 		String PFX = TAB;
 		String MID = " : ";
 		String SFX = "";
